js262/test/language/literals/numeric/S7.8.3_A6.2_T2.js


/*---
info: 0xG is incorrect
es5id: 7.8.3_A6.2_T2
description: Checking if execution of "0xg" fails
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();


0xg
